Ajout d'un paragraphe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 class="text-center bg-red-200 flex">Taiwind css</h1>
+    <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque aliquid, dolores debitis nemo molestias dolor? Maxime vel, veritatis, reprehenderit odit dolor expedita rerum unde quidem rem, aliquid itaque sit iste!</p>
 </body>
 </html>
